wh: fixed the comment text in dark mode popovers not being visible.

--- a/frontend/app/planning/assets/plan.darker.css
+++ b/frontend/app/planning/assets/plan.darker.css
@@ -96,6 +96,9 @@
   background: #d9534f;
   color: #fff;
 }
+.planning-darker .planning-mrp-popover {
+  color: #333;
+}
 .planning-darker .planning-mrp-popover .is-incomplete {
   color: darkorange;
 }
